[gd_scene load_steps=73 format=2]

[ext_resource path="res://Terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assects/Terrain/tiles_packed.png" type="Texture" id=3]
[ext_resource path="res://coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://assects/Platformer12-HUD-coin-font/HUD/coin_gold.png" type="Texture" id=7]
[ext_resource path="res://assects/Platformer12-HUD-coin-font/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://HUD.gd" type="Script" id=9]
[ext_resource path="res://assects/soundsandmusic/music/Swinging Pants.ogg" type="AudioStream" id=10]
[ext_resource path="res://assects/Character/zombie_idle.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=41]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=42]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=43]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=44]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=45]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=46]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=47]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=54]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=55]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=56]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=57]
points = PoolVector2Array( 0, 0, 16, 0, 16, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=58]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=59]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=60]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=61]
points = PoolVector2Array( 0, 0, 16, 0, 16, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=62]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=63]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=64]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=65]
points = PoolVector2Array( 0, 0, 16, 0, 16, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=66]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=67]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=68]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=69]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=70]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=71]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=75]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=76]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=77]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="ConvexPolygonShape2D" id=78]
points = PoolVector2Array( 0, 0, 18, 0, 18, 18, 0, 18 )

[sub_resource type="TileSet" id=16]
resource_local_to_scene = true
0/name = "tiles_packed.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 358, 160 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 18, 18 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 18 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 6 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 7 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 7 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 7 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 7 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 41 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 42 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 43 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 9, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 44 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 10, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 45 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 46 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 11, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 47 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 16, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 54 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 17, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 55 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 18, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 56 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 19, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 57 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 16, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 58 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 17, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 59 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 18, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 60 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 19, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 61 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 16, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 62 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 17, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 63 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 18, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 64 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 19, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 65 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 16, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 66 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 16, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 67 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 17, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 68 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 18, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 69 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 70 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 71 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 13, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 75 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 12, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 76 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 14, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 77 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 15, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 78 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 1310, 33.5 )

[sub_resource type="StyleBoxFlat" id=72]
bg_color = Color( 0.145098, 0.117647, 0.117647, 0.407843 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=73]
size = 62
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=74]
size = 62
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=79]
bg_color = Color( 0.498039, 0.027451, 0.027451, 0.184314 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=80]
size = 62
font_data = ExtResource( 8 )

[sub_resource type="SpriteFrames" id=81]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "goal",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=82]
radius = 68.0

[node name="World" type="Node2D"]
position = Vector2( 1, 10 )
script = ExtResource( 5 )

[node name="Terrain" parent="." instance=ExtResource( 1 )]
position = Vector2( -4, 0 )
scale = Vector2( 3, 3 )
tile_set = SubResource( 16 )
collision_layer = 2
collision_mask = 16
tile_data = PoolIntArray( -262123, 0, 65537, -262122, 0, 65538, -262121, 0, 65538, -262120, 0, 65539, -196581, 0, 262149, -131047, 0, 65537, -131046, 0, 65538, -131045, 0, 65538, -131044, 0, 65538, -131043, 0, 65539, -65521, 0, 65537, -65520, 0, 65538, -65519, 0, 65538, -65518, 0, 65538, -65517, 0, 65538, -65516, 0, 65539, 65535, 0, 131079, 32, 0, 65537, 33, 0, 65538, 34, 0, 65538, 35, 0, 65538, 36, 0, 65539, 131071, 0, 131079, 65544, 0, 14, 65545, 0, 13, 65546, 0, 12, 65547, 0, 13, 65548, 0, 15, 65565, 0, 262149, 196607, 0, 131079, 131082, 0, 131084, 131100, 0, 65537, 131101, 0, 65538, 131102, 0, 65539, 262143, 0, 131079, 196611, 0, 14, 196612, 0, 12, 196613, 0, 15, 196618, 0, 131084, 196635, 0, 65537, 196636, 0, 65538, 196637, 0, 65538, 196638, 0, 65538, 196639, 0, 65539, 327679, 0, 131079, 262146, 0, 393222, 262148, 0, 196620, 262150, 0, 393223, 262153, 0, 393223, 262154, 0, 196620, 262155, 0, 393223, 262158, 0, 393223, 262159, 0, 262149, 262161, 0, 393222, 262165, 0, 393223, 262167, 0, 262149, 262169, 0, 393223, 262170, 0, 65537, 262171, 0, 65538, 262172, 0, 65538, 262173, 0, 65538, 262174, 0, 65538, 262175, 0, 65538, 262176, 0, 65539, 262177, 0, 393223, 262183, 0, 262149, 262188, 0, 262150, 393215, 0, 131079, 327680, 0, 65537, 327681, 0, 65538, 327682, 0, 65538, 327683, 0, 65538, 327684, 0, 65538, 327685, 0, 65538, 327686, 0, 65538, 327687, 0, 65538, 327688, 0, 65538, 327689, 0, 65538, 327690, 0, 65538, 327691, 0, 65538, 327692, 0, 65538, 327693, 0, 65538, 327694, 0, 65538, 327695, 0, 65538, 327696, 0, 65538, 327697, 0, 65538, 327698, 0, 65538, 327699, 0, 65538, 327700, 0, 65538, 327701, 0, 65538, 327702, 0, 65538, 327703, 0, 65538, 327704, 0, 65538, 327705, 0, 65538, 327706, 0, 65538, 327707, 0, 65538, 327708, 0, 65538, 327709, 0, 65538, 327710, 0, 65538, 327711, 0, 65538, 327712, 0, 65538, 327713, 0, 65538, 327714, 0, 65538, 327718, 0, 65537, 327719, 0, 65538, 327720, 0, 65538, 327721, 0, 65538, 327722, 0, 65538, 327723, 0, 65538, 327724, 0, 65539, 458751, 0, 131079, 393216, 0, 393217, 393217, 0, 393218, 393218, 0, 393218, 393219, 0, 393218, 393220, 0, 393218, 393221, 0, 393218, 393222, 0, 393218, 393223, 0, 393218, 393224, 0, 393218, 393225, 0, 393218, 393226, 0, 393218, 393227, 0, 393218, 393228, 0, 393218, 393229, 0, 393218, 393230, 0, 393218, 393231, 0, 393218, 393232, 0, 393218, 393233, 0, 393218, 393234, 0, 393218, 393235, 0, 393218, 393236, 0, 393218, 393237, 0, 393218, 393238, 0, 393218, 393239, 0, 393218, 393240, 0, 393218, 393241, 0, 393218, 393242, 0, 393218, 393243, 0, 393218, 393244, 0, 393218, 393245, 0, 393218, 393246, 0, 393218, 393247, 0, 393218, 393248, 0, 393218, 393249, 0, 393218, 393250, 0, 393218, 393254, 0, 393217, 393255, 0, 393218, 393256, 0, 393218, 393257, 0, 393218, 393258, 0, 393218, 393259, 0, 393218, 393260, 0, 393219, 524287, 0, 131079, 458752, 0, 393217, 458753, 0, 393218, 458754, 0, 393218, 458755, 0, 393218, 458756, 0, 393218, 458757, 0, 393218, 458758, 0, 393218, 458759, 0, 393218, 458760, 0, 393218, 458761, 0, 393218, 458762, 0, 393218, 458763, 0, 393218, 458764, 0, 393218, 458765, 0, 393218, 458766, 0, 393218, 458767, 0, 393218, 458768, 0, 393218, 458769, 0, 393218, 458770, 0, 393218, 458771, 0, 393218, 458772, 0, 393218, 458773, 0, 393218, 458774, 0, 393218, 458775, 0, 393218, 458776, 0, 393218, 458777, 0, 393218, 458778, 0, 393218, 458779, 0, 393218, 458780, 0, 393218, 458781, 0, 393218, 458782, 0, 393218, 458783, 0, 393218, 458784, 0, 393218, 458785, 0, 393218, 458786, 0, 393218, 458790, 0, 393217, 458791, 0, 393218, 458792, 0, 393218, 458793, 0, 393218, 458794, 0, 393218, 458795, 0, 393218, 458796, 0, 393219, 524288, 0, 458753, 524289, 0, 458754, 524290, 0, 458754, 524291, 0, 458754, 524292, 0, 458754, 524293, 0, 458754, 524294, 0, 458754, 524295, 0, 458754, 524296, 0, 458754, 524297, 0, 458754, 524298, 0, 458754, 524299, 0, 458754, 524300, 0, 458754, 524301, 0, 458754, 524302, 0, 458754, 524303, 0, 458754, 524304, 0, 458754, 524305, 0, 458754, 524306, 0, 458754, 524307, 0, 458754, 524308, 0, 458754, 524309, 0, 458754, 524310, 0, 458754, 524311, 0, 458754, 524312, 0, 458754, 524313, 0, 458754, 524314, 0, 458754, 524315, 0, 458754, 524316, 0, 458754, 524317, 0, 458754, 524318, 0, 458754, 524319, 0, 458754, 524320, 0, 458754, 524321, 0, 458754, 524322, 0, 458754, 524326, 0, 458753, 524327, 0, 458754, 524328, 0, 458754, 524329, 0, 458754, 524330, 0, 458754, 524331, 0, 458754, 524332, 0, 458755 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 30, 200 )
collision_layer = 513
collision_mask = 538

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_bottom = 600
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.4
drag_margin_right = 0.4

[node name="KillPlane" type="Area2D" parent="."]
position = Vector2( 0, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
light_mask = 524803
position = Vector2( 1283, 606.5 )
shape = SubResource( 17 )

[node name="PinkSlime" parent="." instance=ExtResource( 6 )]
position = Vector2( 437, 263 )

[node name="Node2D" type="Node2D" parent="."]

[node name="coin1" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 240, 110 )

[node name="coin2" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 557, -2 )

[node name="coin3" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 695, 206 )

[node name="coin4" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 974, -104 )

[node name="coin5" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 1862, -61 )

[node name="coin6" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 2270, 203 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="HUD"]
margin_right = 189.0
margin_bottom = 94.0
custom_styles/panel = SubResource( 72 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
margin_left = 12.0
margin_top = 18.0
margin_right = 63.0
margin_bottom = 74.0
texture = ExtResource( 7 )

[node name="x" type="Label" parent="HUD"]
margin_left = 72.0
margin_top = 10.0
margin_right = 108.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.941176, 0.894118, 0.054902, 1 )
custom_fonts/font = SubResource( 73 )
text = "x"
align = 1
valign = 1

[node name="Coins" type="Label" parent="HUD"]
margin_left = 106.0
margin_top = 14.0
margin_right = 186.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0.886275, 0.85098, 0.0784314, 1 )
custom_fonts/font = SubResource( 74 )
text = "##"
align = 1
valign = 1

[node name="Panel2" type="Panel" parent="HUD"]
light_mask = 527
margin_left = -3.0
margin_top = -91.0
margin_right = 1156.0
margin_bottom = 645.0
custom_styles/panel = SubResource( 79 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="HUD/Panel2"]
margin_left = 3.0
margin_top = -12.0
margin_right = 1028.0
margin_bottom = 602.0
custom_colors/font_color = Color( 0.968627, 1, 0.00784314, 1 )
custom_fonts/font = SubResource( 80 )
text = "You won!"
align = 1
valign = 1

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="Goal" type="Area2D" parent="."]
position = Vector2( 2177, 255 )
collision_layer = 512
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Goal"]
position = Vector2( 216.5, -46.5 )
scale = Vector2( 1.0375, 1.22727 )
frames = SubResource( 81 )
animation = "goal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 218, -37 )
shape = SubResource( 82 )

[connection signal="body_entered" from="KillPlane" to="." method="_on_KillPlane_body_entered"]
[connection signal="coin_collected" from="Node2D/coin1" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Node2D/coin2" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Node2D/coin3" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Node2D/coin4" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Node2D/coin5" to="HUD" method="_on_coin5_coin_collected"]
[connection signal="coin_collected" from="Node2D/coin6" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
